[project]
name = "connstring-converter-cli"
version = "0.1.0"
description = "A CLI tool to convert connection details into various connection string formats."
authors = [{ name = "Ozair Couto", email = "ozair.marlon@proton.me" }]
dependencies = [
    "typer[rich]>=0.9.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
connstring-converter = "connstring_converter_cli.main:cli_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["connstring_converter_cli"]
